# STAG

./: .gitignore  Dockerfile  PROJECT_REVIEW.md  README.md  docker-compose.yaml  requirements-dev.txt
.github/workflows/: ros-ci.yaml
docker/: README.md  entrypoint.sh
ros_ws/src/stag/: CMakeLists.txt  README.md  package.xml
ros_ws/src/stag/config/: stag.yaml
ros_ws/src/stag/launch/: stag.launch.py
ros_ws/src/stag/msg/: GraphEdge.msg  GraphNode.msg  TerrainGraph.msg
ros_ws/src/stag/scripts/: benchmark_topology_core  demo_costmap_publisher  stag_node
ros_ws/src/stag/stag_core/: stag_node.py  topology_core.py
ros_ws/src/stag/test/: test_stag_node_integration.py  test_topology_core.py
